--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -24,7 +24,7 @@
                     <a class="nav-link text-white active h5" href="/">Login</a>
                 </li>
                 <li class="nav-item col-md-4">
-                    <a class="nav-link text-white active h5" href="/">Register</a>
+                    <a class="nav-link text-white active h5" href="/users/register">Register</a>
                 </li>
             </th:block>
                 <li th:if="${session.user != null}" class="nav-item col-md-4">
