--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
             <h3>
                 <a class="text-primay" href="/">Login</a>
                 if you have an account or
-                <a class="text-primay" href="/">Register</a>
+                <a class="text-primay" href="/users/register">Register</a>
                 now and check our deals.
             </h3>
         </div>
