--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,66 +1,52 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Shopping list App</title>
-    <link rel="stylesheet" href="/css/reset-css.css"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="fragments/fragment :: head"></head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg bg-nav rounded">
-			<a class="nav-link text-white active h5" href="/">Shopping List App</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-                <ul class="navbar-nav row">
-                    <li class="nav-item col-md-4">
-                        <a class="nav-link text-white active h5" href="/">Login</a>
-                    </li>
-                    <li class="nav-item col-md-4">
-                        <a class="nav-link text-white active h5" href="/">Register</a>
-					</li>
-				</ul>
-			</div>
-	</nav>
-
+    <nav th:replace="fragments/fragment :: navigation"></nav>
 </header>
 <main>
     <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Register</span></h1>
     <hr class="hr-3 w-25 bg-white"/>
-    <form class="mx-auto w-25 bg-blur rounded" method="" action="/" >
-        <div class="form-group" >
-            <div  class="label-holder textCol d-flex justify-content-center">
+    <form action="/users/register" method="POST" th:object="${userRegisterBindingModel}"
+          class="mx-auto w-25 bg-blur rounded">
+        <div class="form-group">
+            <div class="label-holder textCol d-flex justify-content-center">
                 <label for="username" class="h4 mb-2 text-white">Username</label>
             </div>
-            <input type="text" class="form-control" id="username" name="username" />
-            <small class="text-danger">Username error message</small>
+            <input th:field="*{username}" th:errorclass="bg-danger" type="text" class="form-control" id="username"
+                   name="username"/>
+            <small th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-danger">Username error
+                message</small>
         </div>
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="email" class="h4 mb-2">Email</label>
             </div>
-            <input type="email" class="form-control" id="email" name="email" />
+            <input th:field="*{email}" th:errorclass="bg-danger" type="email" class="form-control" id="email"
+                   name="email"/>
 
-            <small class="text-danger">Email error message</small>
+            <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger">Email error
+                message</small>
         </div>
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
-                <label  for="password" class="h4 mb-2" >Password</label>
+                <label for="password" class="h4 mb-2">Password</label>
             </div>
-            <input type="password" class="form-control" id="password" name="password" />
-            <small class="text-danger">Password error message</small>
+            <input th:field="*{password}" th:errorclass="bg-danger" type="password" class="form-control" id="password"
+                   name="password"/>
+            <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger">Password error
+                message</small>
         </div>
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="confirmPassword" class="h4 mb-2">Confirm Password</label>
             </div>
-            <input type="password" class="form-control" id="confirmPassword"
-                   name="confirmPassword" />
+            <input th:field="*{confirmPassword}" th:errorclass="bg-danger" type="password" class="form-control"
+                   id="confirmPassword"
+                   name="confirmPassword"/>
+            <small th:if="${confirmPassDontMatch}" class="text-danger">Confirm password does not match</small>
         </div>
 
         <div class="button-holder d-flex justify-content-center">
@@ -69,12 +55,6 @@
     </form>
 </main>
 
-<footer class="footer bg-transparent  py-2">
-    <div class="container-fluid text-center">
-		<div class="footer-background h5 text-white">
-           &copy; Spring team 2020. All rights reserved.
-		</div>
-	</div>
-</footer>
+<footer th:replace="fragments/fragment :: footer"></footer>
 </body>
 </html>
