--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
             <p class="h4">The application is here to help us keep in mind our shopping needs.</p>
             <hr class="my-3 bg-white w-75" />
             <h3>
-                <a class="text-primay" href="/">Login</a>
+                <a class="text-primay" href="/users/login">Login</a>
                 if you have an account or
                 <a class="text-primay" href="/users/register">Register</a>
                 now and check our deals.
