--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -28,7 +28,7 @@
                 </li>
             </th:block>
                 <li th:if="${session.user != null}" class="nav-item col-md-4">
-                    <a class="nav-link text-white active h5" href="/">Logout</a>
+                    <a class="nav-link text-white active h5" href="/users/logout">Logout</a>
                 </li>
             </ul>
         </div>
