--- a/src/main/resources/templates/product-add.html
+++ b/src/main/resources/templates/product-add.html
@@ -20,34 +20,43 @@
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="description" class="h4 mb-2">Description</label>
             </div>
-            <textarea th:field="*{description}" th:errorclass="bg-danger" type="text" class="form-control" id="description" name="description"></textarea>
-            <small th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="text-danger">Description error message</small>
+            <textarea th:field="*{description}" th:errorclass="bg-danger" type="text" class="form-control"
+                      id="description" name="description"></textarea>
+            <small th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="text-danger">Description
+                error message</small>
         </div>
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="neededBefore" class="h4 mb-2">Before</label>
             </div>
-            <input th:field="*{neededBefore}" th:errorclass="bg-danger" type="datetime-local" class="form-control" id="neededBefore" name="neededBefore"/>
-            <small th:if="${#fields.hasErrors('neededBefore')}" th:errors="*{neededBefore}" class="text-danger">Needed before date error</small>
+            <input th:field="*{neededBefore}" th:errorclass="bg-danger" type="datetime-local" class="form-control"
+                   id="neededBefore" name="neededBefore"/>
+            <small th:if="${#fields.hasErrors('neededBefore')}" th:errors="*{neededBefore}" class="text-danger">Needed
+                before date error</small>
         </div>
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="price" class="h4 mb-2">Price</label>
             </div>
-            <input th:field="*{price}" th:errorclass="bg-danger" type="number" step="0.1" class="form-control" id="price" name="price"/>
-            <small th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="text-danger">Price error message</small>
+            <input th:field="*{price}" th:errorclass="bg-danger" type="number" step="0.1" class="form-control"
+                   id="price" name="price"/>
+            <small th:if="${#fields.hasErrors('price')}" th:errors="*{price}" class="text-danger">Price error
+                message</small>
         </div>
         <div class="form-group">
             <div class="text-white label-holder d-flex justify-content-center">
                 <label for="category" class="h4 mb-2">Category</label>
             </div>
-            <select th:field="*{category}" th:errorclass="bg-danger" class="browser-default custom-select" id="category" name="category">
+            <select th:field="*{category}" th:errorclass="bg-danger" class="browser-default custom-select" id="category"
+                    name="category">
                 <option value="">Select category</option>
                 <option th:each="c :${T(com.softuni.exam_prep1.models.entities.enums.CategoryNameEnum).values()}"
-                        th:text="${c}" th:value="${c}">Food</option>
+                        th:text="${c}" th:value="${c}">Food
+                </option>
 
             </select>
-            <small th:if="${#fields.hasErrors('category')}" th:errors="*{category}" class="text-danger">Category error message</small>
+            <small th:if="${#fields.hasErrors('category')}" th:errors="*{category}" class="text-danger">Category error
+                message</small>
         </div>
 
         <div class="button-holder d-flex justify-content-center">
